# sec-gate-oidc

./: .gitignore  CMakeLists.txt  MAINTAINERS  README.md  sec-gate-oidc.pc.in
build.sav/: CMakeCache.txt  CMakeCacheForScript.cmake  Makefile  cmake_install.cmake
build.sav/conf.d/: Makefile  cmake_install.cmake
build.sav/conf.d/project/: Makefile  cmake_install.cmake
build.sav/conf.d/project/etc/: Makefile  cmake_install.cmake
build.sav/conf.d/project/etc/oidc-config/: oidc-local.json  oidc-oauth2.json
build.sav/conf.d/project/htdocs/: Makefile  cmake_install.cmake
build.sav/idps/: Makefile  cmake_install.cmake
build.sav/libs/: Makefile  cmake_install.cmake
build.sav/libs/libcurl-glue/: Makefile  cmake_install.cmake
build.sav/libs/pcscd-cient/: Makefile  cmake_install.cmake
build.sav/plugins/: Makefile  cmake_install.cmake
build.sav/plugins/oidc-pam/: Makefile  cmake_install.cmake
build.sav/plugins/oidc-pcsc/: Makefile  cmake_install.cmake
build.sav/src/: Makefile  cmake_install.cmake
conf.d/cmake/: 00-debian-config.cmake  00-fedora-config.cmake  00-opensuse-config.cmake  01-ubuntu-config.cmake  config.cmake
conf.d/project/etc/: CMakeLists.txt  oidc-basic copy.json  oidc-basic.json  oidc-config.json  oidc-dex.json  oidc-html5.json  oidc-local.json  oidc-nfc.json  oidc-oauth2.json
conf.d/project/htdocs/: index.html
conf.d/project/htdocs/admin/: index.html
conf.d/project/htdocs/confidential/: index.html
conf.d/project/htdocs/idps/common/: error.html  fedlink.html  login.html  register.html  user-login.html.sav
conf.d/project/htdocs/idps/github/: login.html
conf.d/project/htdocs/idps/ldap/: login.html
conf.d/project/htdocs/idps/pam/: login.html  passwd.html
conf.d/project/htdocs/idps/pcsc-nfc/: login.html
conf.d/project/htdocs/jscss/: afb-websock.js  iotbzh-Binding.css  sgate-binding.css  sgate-binding.js  sgate-common.js  sgate-glue.js  sgate-query.js
conf.d/project/htdocs/login/: index.html
conf.d/project/htdocs/private/: index.html
conf.d/project/htdocs/public/: index.html
conf.d/project/ssl/: devel-cert.pem  devel-key.pem  gen-cert.sh
conf.d/project/tests/: oidc-api-test1.json  oidc-api-test2.json  oidc-api-test3.json  oidc-start-apis.sh
conf.d/wgt/: config.xml.in
docs/: 1-architecture-presentation.md  1-architecture_presentation.md  2-installation-guide.md  2-installation_guide.md  3-configuration.md  4-running_and_testing.md  4-sgate-svc-api.md  4.1-onelogin-kickstart.md  4.2-github-kickstart.md  4.3-ldap-kickstart.md  5-running-and-testing.md  5-sgate-api.md  5-sgate-svc-api.md  5.2-github-kickstart.md  5.4-pam-kickstart.md  5.5-phantauth-kickstart.md  afb-lib-readme.fulup  api-services-book.yml
idps/: idp-builtin.c  idp-github.c  idp-github.h  idp-ldap.c  idp-ldap.h  idp-oidc.c
idps/docs/: github-kickstart.md  ldap-kickstart.md  onelogin-kickstart.md  phantauth-kickstart.md
libs/: CMakeLists.txt
libs/idps-builtin/: CMakeLists.txt  idp-builtin.c  idp-github.c  idp-ldap.c  idp-oidc.c
libs/libcurl-afb/: CMakeLists.txt  http-gluafb.c
libs/libcurl-glue/: CMakeLists.txt  curl-client.c  curl-glue.h  http-gluafb.c
libs/libidps-builtin/: CMakeLists.txt  idp-github.h  idp-ldap.c  idp-ldap.h  idp-oidc.h  idps-builtin.h
libs/pcscd-cient/: 00-README.md  CMakeLists.txt  README.md  client-pcsc.c  pcsc-config.c  pcsc-config.h  pcsc-glue.c  pcsc-glue.h
libs/pcscd-cient/test/: simple-pcsc.json
libs/pcscd-client/: README.md  client-pcsc.c  pcsc-config.c  pcsc-config.h  pcsc-glue.c  pcsc-glue.h
libs/pcscd-client/test/: simple-pcsc.json  simple-scard.json
plugins/oidc-pam/: CMakeLists.txt  README.md  oidc-pam.c
plugins/oidc-pcsc/: CMakeLists.txt  README.md  main-pcsc.c  oidc-pcsc.c  pcsc-glue.h
plugins/oidc-pcsc/test/: nfc-blacklist.conf  simple-pcsc.json
src/: CMakeLists.txt  _ToDo.fulup  oidc-alias.c  oidc-alias.h  oidc-apis.c  oidc-apis.h  oidc-core.c  oidc-core.h  oidc-defaults.c  oidc-defaults.h  oidc-fedid.c  oidc-fedid.h  oidc-github.c  oidc-github.h  oidc-idp.c  oidc-idp.h  oidc-idsvc.c  oidc-idsvc.h  oidc-utils.c  oidc-utils.h
src/idps-builtin/: CMakeLists.txt  idp-github.c  idp-github.h  idp-ldap.c  idp-ldap.h  idp-oidc.c  idp-oidc.h  idps-builtin.h
src/idps-plugins/: CMakeLists.txt
src/idps-plugins/oidc-pam/: CMakeLists.txt  oidc-pam.c
src/idps-plugins/oidc-pcsc/: 00-README.md  CMakeLists.txt  main-pcsc.c  oidc-pcsc.c  pcsc-config.c  pcsc-config.h  pcsc-glue.c  pcsc-glue.h  pcsc-utils.c  pcsc-utils.h
src/idps-plugins/oidc-pcsc/test/: 00-README.md  simple-pcsc copy.json  simple-pcsc.json
src/oidc-authorities/: CMakeLists.txt  idp-callbacks.h  idp-github.c  idp-github.h
src/oidc-http/: CMakeLists.txt  http-client.c  http-client.h  http-gluafb.c
